--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container d-flex justify-content-around align-items-center" style="width:60%;height:20%">
             
             <div class="etiqueta-1 d-flex justify-content-center align-items-center">
-                <img src="assets/img/icono-limpieza.png" alt="Girl in a jacket" width="90%" height="90%"> 
+                <img src="assets/img/icono-limpieza.PNG" alt="Girl in a jacket" width="90%" height="90%"> 
             </div>
             <div class="etiqueta-1 d-flex justify-content-center align-items-center">
                 <img src="assets/img/icono-fumigacion.PNG" alt="Girl in a jacket" width="90%" height="90%"> 
