--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         
         <div class="col-12 d-flex flex-column justify-content-center align-items-center">
             <div class="d-flex flex-row justify-content-around align-items-center" style="height:350px;width:100%;">
-                <img src="assets/img/asociate-1.png" alt="Girl in a jacket" width="30%"> 
-                <img src="assets/img/asociate-2.png" alt="Girl in a jacket" width="30%"> 
-                <img src="assets/img/asociate-3.png" alt="Girl in a jacket" width="30%"> 
+                <img src="assets/img/asociate-1.PNG" alt="Girl in a jacket" width="30%"> 
+                <img src="assets/img/asociate-2.PNG" alt="Girl in a jacket" width="30%"> 
+                <img src="assets/img/asociate-3.PNG" alt="Girl in a jacket" width="30%"> 
             </div>
             <div class="d-flex flex-row justify-content-center align-items-center" >
                 <div class="col-6">
