Responsive para tablets y teléfonos

--- a/limpieza/index.html
+++ b/limpieza/index.html
@@ -20,9 +20,9 @@
     </header>
 
     <article class="container-servicio-lista-2">
-        <div class="d-flex container-servicio-2">
-            <div class="col-6 d-flex flex-column justify-content-center align-items-center">
-                <div class="etiqueta-grande-servicio-1 d-flex flex-column justify-content-start align-items-center col-8 pt-3" >
+        <div class="d-flex flex-column flex-sm-row container-servicio-2">
+            <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center container-servicio-1-1">
+                <div class="etiqueta-grande-servicio-1 d-flex flex-column justify-content-start align-items-start col-8 pt-3" >
                     <h3 class="titulo-servicio-2">Limpieza Industrial</h3>
                     <ul>
                         <li>Pre y post obras</li>
@@ -35,8 +35,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-6 d-flex flex-column justify-content-center align-items-center">
-                <div class="etiqueta-grande-servicio-2 d-flex flex-column justify-content-start align-items-center col-8 pt-3" >
+            <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center container-servicio-1-1">
+                <div class="etiqueta-grande-servicio-2 d-flex flex-column justify-content-start align-items-start col-8 pt-3" >
                     <h3 class="titulo-servicio-2">Limpieza Hogar y Oficina</h3>
                     <ul>
                         <li>Cocinas</li>
