--- a/arquitectura/index.html
+++ b/arquitectura/index.html
@@ -19,10 +19,10 @@
         
     </header>
 
-    <article class="container-servicio-lista-2">
-        <div class="d-flex container-servicio-2">
-            <div class="col-4 d-flex flex-column justify-content-center align-items-center">
-                <div class="etiqueta-grande-servicio-1 d-flex flex-column justify-content-start align-items-center col-8 pt-3" >
+    <article class="container-servicio-lista-5">
+        <div class="d-flex flex-column flex-sm-row container-servicio-2">
+            <div class="col-sm-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="etiqueta-grande-servicio-1 d-flex flex-column justify-content-start align-items-start col-8 pt-3 container-servicio-1-1" >
                     <h3 class="titulo-servicio-2">Anteproyectos y proyectos</h3>
                     <ul>
                         <li>Ley del Mono (20.898)</li>
@@ -37,8 +37,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-4 d-flex flex-column justify-content-center align-items-center">
-                <div class="etiqueta-grande-servicio-2 d-flex flex-column justify-content-start align-items-center col-8 pt-3" >
+            <div class="col-sm-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="etiqueta-grande-servicio-2 d-flex flex-column justify-content-start align-items-start col-8 pt-3 container-servicio-1-1" >
                     <h3 class="titulo-servicio-2">Dibujo</h3>
                     <ul>
                         <li>Planimetría CAD</li>
@@ -49,8 +49,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-4 d-flex flex-column justify-content-center align-items-center">
-                <div class="etiqueta-grande-servicio-2 d-flex flex-column justify-content-start align-items-center col-8 pt-3" >
+            <div class="col-sm-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="etiqueta-grande-servicio-2 d-flex flex-column justify-content-start align-items-start col-8 pt-3 container-servicio-1-1" >
                     <h3 class="titulo-servicio-2">Proyectos especiales</h3>
                     <ul>
                         <li>Proyecto alcantarillado</li>
