--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 <body>
     <header class=" container-fluid d-flex flex-column flex-sm-row">
 
+        <a href="https://wa.me/56982721454?text=Hola,%20me%20interesa%20tener%20más%20información%20sobre%20sus%20servicios"  class='button-link'>
+            <img src='assets/img/whatsapp.svg' alt='whatsapp' title='whatsapp' class='btn-whatsapp'>
+        </a>
+
+        <a href="tel:+56959260586"  class='button-link'>
+            <p class="btn-telefono">9 5926 0586</p>
+        </a>
+
         <div class="col-12 col-sm-9 d-flex flex-column marca" style="border: 1px transparent">
             <div class="d-flex justify-content-center align-items-center" style="height:40%">
                 <div class=" titulo-marca container-fluid d-flex flex-row " >
