- Se agregó el botón de enviar mensaje

--- a/index.html
+++ b/index.html
@@ -128,7 +128,10 @@
                 <div class="d-flex flex-row justify-content-center align-items-center mb-3">
                     <p class="label-form col-3 mt-3">Comentario</p>
                     <textarea class="form-control rounded-4" id="exampleFormControlTextarea1" rows="3" style="width:50%;"></textarea>
-                  </div>
+                </div>
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <button type="button" class="btn btn-secondary btn-mensaje">Enviar mensaje</button>
+                </div>
             </div>
             </div>
             
