Se agregó el logo

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
                     </div>
                     <div class="col-11 " >
-                        <h5 class="titulo-marca-1">Lo necesitas, lo piensas,</h5>
-                        <h3 class="titulo-marca-2">LO HACEMOS!</h3>
+                        <img src="assets/img/lohacemos.svg" alt="Girl in a jacket" class="logo"> 
                     </div>
                 </div>
             </div>
