--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <textarea name="comentario" class="form-control rounded-4" id="exampleFormControlTextarea1" rows="3" style="width:50%;"></textarea>
                         </div>
                         <div class="d-flex flex-row justify-content-center align-items-center">
-                            <button type="submit" value="Enviar" class="btn btn-secondary btn-mensaje">Enviar mensaje</button>
+                            <input type="submit" value="Enviar" class="btn btn-secondary btn-mensaje">Enviar mensaje</input>
                         </div>
                     </form>
                 </div>
